--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
+    "gulp-mocha": "^4.0.1",
     "gulp-typescript": "^3.1.5",
     "merge2": "^1.0.3",
     "run-sequence": "^1.2.2",
+    "ts-node": "^2.1.0",
+    "tsconfig-paths": "^2.1.1",
     "typescript": "^2.2.1"
   }
 }
