--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "baseUrl": ".",
         "paths": {
             "*": [
-                "src/*"
+                "src/*",
+                "generated/*"
             ]
         }
     },
