--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
         "baseUrl": ".",
         "paths": {
             "*": [
-                "src/*",
-                "generated/*"
+                "src/*"
             ]
         }
     },
