--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
             ]
         }
     },
+    "include": [
+        "src/**/*"
+    ],
     "exclude": [
         "node_modules",
         "dist"
